--- a/jupyter/Charger Location Example (Option 2).ipynb
+++ b/jupyter/Charger Location Example (Option 2).ipynb
@@ -63942,7 +63942,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "beb_chargers",
    "language": "python",
    "name": "python3"
   },
